adding one section on dashboard

--- a/03_dash-board/index.html
+++ b/03_dash-board/index.html
@@ -343,9 +343,104 @@
                             </div>
                         </div>
 
-      <!-- here are add dashboard container -->
 
-      
+                        <div class="query-summary-dashboard">
+
+                            <div class="query-summary">
+                                <h1>Queries Summary</h1>
+                                <div class="query-summary-dashboard-box">
+
+                                    <div class="box">
+                                        <div class="query-summary-img-container">
+                                            <img src="/Assets/images/01_query.png" alt="" class="dashboard-icon-img">
+                                            <p>Pending Queries</p>
+                                        </div>
+                                        <p id="content-amount">05</p>
+                                    </div>
+
+                                    <div class="box">
+                                        <div class="query-summary-img-container">
+                                            <img src="/Assets/images/02_query.png" alt="" class="dashboard-icon-img">
+                                            <p style="color: #34AD78;">Resolved Queries</p>
+                                        </div>
+                                        <p id="content-amount">05</p>
+                                    </div>
+
+                                    <!-- add box -->
+                                </div>
+                            </div>
+
+
+                            <div class="last-query-summary">
+                                <h1>Last three Queries Summary</h1>
+                                <div class="last-query-summary-dashboard">
+
+                                    <div class="query-box">
+                                        <div class="query-profile">
+                                            <img src="/Assets/images/last-client-query.png" alt="">
+                                            <span>
+                                                <h3>john Smith</h3>
+                                                <p>johnsmith@gmail.com</p>
+                                            </span>
+                                        </div>
+                                        <div class="query-btns">
+                                            <button id="query-btn">View Query</button>
+                                            <button id="resolve-btn">Resolve Now</button>
+                                        </div>
+                                    </div>
+
+                                    <div class="query-box">
+                                        <div class="query-profile">
+                                            <img src="/Assets/images/last-client-query.png" alt="">
+                                            <span>
+                                                <h3>john Smith</h3>
+                                                <p>johnsmith@gmail.com</p>
+                                            </span>
+                                        </div>
+                                        <div class="query-btns">
+                                            <button id="query-btn">View Query</button>
+                                            <button id="resolve-btn">Resolve Now</button>
+                                        </div>
+                                    </div>
+
+                                    <div class="query-box">
+                                        <div class="query-profile">
+                                            <img src="/Assets/images/last-client-query.png" alt="">
+                                            <span>
+                                                <h3>john Smith</h3>
+                                                <p>johnsmith@gmail.com</p>
+                                            </span>
+                                        </div>
+                                        <div class="query-btns">
+                                            <button id="query-btn">View Query</button>
+                                            <button id="resolve-btn">Resolve Now</button>
+                                        </div>
+                                    </div>
+
+                                    <!-- add query box -->
+                                </div>
+
+                                <div id="query-view-all-btn">
+                                    <button>View All ></button>
+                                </div>
+
+
+                            </div>
+
+
+                        </div>
+
+                        
+                        <div class="active-user-dashboard">
+                            <h1></h1>
+                            <p></p>
+                            <div class="active-user-graph-img">
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                        <!-- here are add dashboard container -->
+
+
 
                     </div>
 
