dashboard option section are added

--- a/03_dash-board/index.html
+++ b/03_dash-board/index.html
@@ -155,9 +155,8 @@
 
 
         <!--  DASHBOARD PAGE -->
-
         <main>
-            <section id="Dashboard-page">
+            <section id="dashboard-page" style="background-color:yellow;">
 
                 <div class="dashboard-container"><!-- scroll -->
                     <div class="dashbord-content"><!-- content container -->
@@ -363,7 +362,7 @@
                                             <img src="/Assets/images/02_query.png" alt="" class="dashboard-icon-img">
                                             <p style="color: #34AD78;">Resolved Queries</p>
                                         </div>
-                                        <p id="content-amount">05</p>
+                                        <p id="content-amount">052</p>
                                     </div>
 
                                     <!-- add box -->
@@ -430,25 +429,30 @@
 
                         </div>
 
-                        
+
                         <div class="active-user-dashboard">
-                            <h1></h1>
-                            <p></p>
+                            <h1>Active Users (Ongoing Programs)</h1>
+                            <p>Visual Graph Representation</p>
                             <div class="active-user-graph-img">
-                                <img src="" alt="">
+                                <img src="/Assets/images/acitve-user-graph.png" alt="graph">
                             </div>
                         </div>
-                        <!-- here are add dashboard container -->
 
-
+                        <!-- add dashboard container -->
+                        <div class="goto-top-btn">
+                            <a href="#dashboard-page" onclick="scrollTotop()">
+                                <img src="/Assets/images/goto-top-btn.png" alt="">
+                                <p>Go to Top</p>
+                            </a>
+                        </div>
 
                     </div>
 
 
-
-
                 </div>
                 </div>
+
+
 
             </section>
 
