internship section are added

--- a/03_dash-board/index.html
+++ b/03_dash-board/index.html
@@ -1179,7 +1179,7 @@
                                     <p>This Month:<span>+02 Mentorship Applied</span></p>
                                 </div>
 
-                                <div class="box" box-link="Under Review Candidates">
+                                <div class="box" box-link="Mentorship Under Review Candidates">
                                     <div class="box-img-container">
                                         <span>
                                             <img src="/Assets/images/02_under-review.png" alt=""
@@ -1192,7 +1192,7 @@
                                     <p>This Month:<span>+02 Mentorship Applied</span></p>
                                 </div>
 
-                                <div class="box" box-link="Selected Candidates">
+                                <div class="box" box-link="Mentorship Selected Candidates">
                                     <div class="box-img-container">
                                         <span>
                                             <img src="/Assets/images/03_selected.png" alt="" class="dashboard-icon-img">
@@ -1204,7 +1204,7 @@
                                     <p>This Month:<span>+02 Mentorship Applied</span></p>
                                 </div>
 
-                                <div class="box" box-link="Rejected Candidates">
+                                <div class="box" box-link="Mentorship Rejected Candidates">
                                     <div class="box-img-container">
                                         <span>
                                             <img src="/Assets/images/04_rejected.png" alt="" class="dashboard-icon-img">
@@ -1298,7 +1298,7 @@
                         </div>
                         <!-- mentorship -> table 2 -->
                         <div class="mentorship-table-data" id="under-review-Candidates" style="display: none;"
-                            table-id="Under Review Candidates">
+                            table-id="Mentorship Under Review Candidates">
                             <div class="mentorship-table-data-container">
 
                                 <div class="heading">
@@ -1371,7 +1371,7 @@
                         </div>
                         <!-- mentorship -> table 3 -->
                         <div class="mentorship-table-data" id="Selected-Candidates" style="display: none;"
-                            table-id="Selected Candidates">
+                            table-id="Mentorship Selected Candidates">
                             <div class="mentorship-table-data-container">
 
                                 <div class="heading">
@@ -1444,7 +1444,7 @@
                         </div>
                         <!-- mentorship -> table 4 -->
                         <div class="mentorship-table-data" id="Rejected-Candidates" style="display: none;"
-                            table-id="Rejected Candidates">
+                            table-id="Mentorship Rejected Candidates">
                             <div class="mentorship-table-data-container">
 
                                 <div class="heading">
@@ -1523,7 +1523,7 @@
                             <h1>Mentorship Status</h1>
                             <div class="mentorship-status-box">
 
-                                <div class="box" box-link="Ongoing Mentorship">
+                                <div class="box" box-link="Mentorship Ongoing Mentorship">
                                     <div class="box-img-container">
                                         <span>
                                             <img src="/Assets/images/05_ongoing.png" alt="" class="dashboard-icon-img">
@@ -1535,7 +1535,7 @@
                                     <p>This Month:<span>+02 Mentorship Applied</span></p>
                                 </div>
 
-                                <div class="box" box-link="Number of Roles">
+                                <div class="box" box-link="Mentorship Number of Roles">
                                     <div class="box-img-container">
                                         <span>
                                             <img src="/Assets/images/06_roles.png" alt="" class="dashboard-icon-img">
@@ -1553,7 +1553,7 @@
 
                         <!-- mentorship -> table 5 -->
                         <div class="mentorship-table-data" id="Rejected-Candidates" style="display: none;"
-                            table-id="Ongoing Mentorship">
+                            table-id="Mentorship Ongoing Mentorship">
                             <div class="mentorship-table-data-container">
 
                                 <div class="heading">
@@ -1627,7 +1627,7 @@
 
                         <!-- mentorship -> table 6 -->
                         <div class="mentorship-table-data" id="Rejected-Candidates" style="display: none;"
-                            table-id="Number of Roles">
+                            table-id="Mentorship Number of Roles">
                             <div class="mentorship-table-data-container">
 
                                 <div class="heading">
@@ -1858,7 +1858,7 @@
                             </div>
                         </div>
 
-                        <div class="mentorship-table-data" id="Internship Applied" style="display:none ;"
+                        <div class="mentorship-table-data" id="Internship Under Review Candidates" style="display:none ;"
                             table-id="internship Under Review Candidates">
                             <div class="mentorship-table-data-container">
 
@@ -1931,7 +1931,7 @@
                             </div>
                         </div>
 
-                        <div class="mentorship-table-data" id="Internship Applied" style="display:none ;"
+                        <div class="mentorship-table-data" id="Internship Selected Candidates" style="display:none ;"
                             table-id="internship Selected Candidates">
                             <div class="mentorship-table-data-container">
 
@@ -2004,7 +2004,7 @@
                             </div>
                         </div>
 
-                        <div class="mentorship-table-data" id="Internship Applied" style="display:none ;"
+                        <div class="mentorship-table-data" id="Internship Rejected Candidates" style="display:none ;"
                             table-id="internship Rejected Candidates">
                             <div class="mentorship-table-data-container">
 
@@ -2116,7 +2116,7 @@
                         </div>
 
                         <!-- two table -->
-                        <div class="mentorship-table-data" id="Internship Applied" style="display:none ;"
+                        <div class="mentorship-table-data" id="Internship Open/Ongoing Internships" style="display:none ;"
                             table-id="internship Ongoing Internships">
                             <div class="mentorship-table-data-container">
 
@@ -2188,7 +2188,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mentorship-table-data" id="Internship Applied" style="display:none ;"
+                        <div class="mentorship-table-data" id="Internship Number of Roles" style="display:none ;"
                             table-id="internship Number of Roles">
                             <div class="mentorship-table-data-container">
 
