otp problem is solved now

--- a/02_otp page/index.html
+++ b/02_otp page/index.html
@@ -62,14 +62,14 @@
                             <p>Enter OTP</p> <span>123</span>
                         </div>
                         <div class="otp-input-box">
-                            <span><input type="text" maxlength="1"></span>
-                            <span><input type="text" maxlength="1"></span>
-                            <span><input type="text" maxlength="1"></span>
-                            <span><input type="text" maxlength="1"></span>
-                            <span><input type="text" maxlength="1"></span>
-                            <span><input type="text" maxlength="1"></span>
-
+                            <input type="number" >
+                            <input type="number" disabled>
+                            <input type="number" disabled>
+                            <input type="number" disabled>
+                            <input type="number" disabled>
+                            <input type="number" disabled>
                         </div>
+
                         <div class="resend-otp-box">
                             <p>Didn’t received OTP?</p>
                             <a href="">Resend OTP</a>
@@ -83,6 +83,8 @@
         </div>
     </section>
 
+
+    <script src="script.js" defer></script>
 </body>
 
 </html>
