otp show or hide updated

--- a/01_landing-page/index.html
+++ b/01_landing-page/index.html
@@ -51,7 +51,7 @@
                                 <p>Password</p>
                                 <div class="input">
                                     <input type="password" id="user-password" placeholder="⁕⁕⁕⁕⁕⁕⁕⁕" name="password">
-                                    <img src="images/eye_tracking.png" alt="">
+                                    <img src="images/eye_tracking.png" alt="" id="eye-icon">
                                 </div>
                             </div>
 
@@ -65,6 +65,7 @@
         </div>
     </section>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
