query table added

--- a/02_otp page/index.html
+++ b/02_otp page/index.html
@@ -62,12 +62,12 @@
                             <p>Enter OTP</p> <span>123</span>
                         </div>
                         <div class="otp-input-box">
-                            <input type="number">
-                            <input type="number" disabled>
-                            <input type="number" disabled>
-                            <input type="number" disabled>
-                            <input type="number" disabled>
-                            <input type="number" disabled>
+                            <input type="number" name="digit1">
+                            <input type="number" name="digit2" disabled>
+                            <input type="number" name="digit3" disabled>
+                            <input type="number" name="digit4" disabled>
+                            <input type="number" name="digit5" disabled>
+                            <input type="number" name="digit6" disabled>
                         </div>
 
                         <div class="resend-otp-box">
